# szamlaZokni

./: .gitignore  README.md  shell.nix
bills_to_db/: Cargo.toml
bills_to_db/public/: bills.db
bills_to_db/public/css/: main.css
bills_to_db/public/js/: main.js
bills_to_db/src/: helpers.rs  main.rs  models.rs  routes.rs
bills_to_db/templates/: ear.html  edit.html  index.html  report_page.html
to_pdf/: Cargo.toml
to_pdf/src/: main.rs
