[package]
name = "bills_to_db"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
html2pdf = "0.8.2"
rusqlite = { version = "0.35.0", features = ["vtab", "csvtab"] }
rust_decimal = { version = "1.37.1", features = ["macros"] }
rust_decimal_macros = "1.37.1"
serde = {version = "1.0.219", features = ["derive"]}
tera = "1.20.0"
